# family_apiary_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
docker-compose/: docker-compose.local.yaml
docker-compose/prometheus-data/: prometheus.yml
src/commons/: types.py
src/commons/api/: auth.py  exception_handlers.py
src/commons/app_errors/: errors.py
src/commons/cqrs/: base.py  impl.py
src/commons/datetime_utils/: utils.py
src/commons/db/: sqlalchemy.py
src/commons/db/cache/: base.py  reddis.py
src/commons/entities/: base.py
src/commons/mappers/: README.md  __init__.py  mapper.py  mapper_impl.py  pydantic_mapper.py
src/commons/operations/: operations.py
src/commons/security/: __init__.py  base.py  pwd_manager.py
src/commons/value_objects/: __init__.py  money_decimal.py  phone_number.py  positive_int.py  value_objects.py
src/family_apiary/framework/api/: app.py  clients.py  metrics.py  settings.py
src/family_apiary/framework/containers/: __init__.py  container.py
src/family_apiary/framework/containers/providers/: __init__.py  chat_bots.py  command_handlers.py  db.py  db_repositories.py  mappers.py  mediators.py  operations.py  settings.py
src/family_apiary/framework/database/: engine.py  settings.py
src/family_apiary/framework/log/: __init__.py  config.py  settings.py
src/family_apiary/products/application/dto/: __init__.py  product_purchase_request_notifications.py
src/family_apiary/products/application/interfaces/: product_purchase_request_notificator.py
src/family_apiary/products/application/use_cases/commands/: __init__.py  create_product_purchase_request.py
src/family_apiary/products/application/use_cases/interfaces/: __init__.py  product_purchase_request_notificator.py
src/family_apiary/products/domain/entities/: __init__.py  purchase_request.py  purchase_request_product.py
src/family_apiary/products/domain/repositories/: __init__.py  purchase_request_repo.py
src/family_apiary/products/infrastructure/api_controllers/: __init__.py  routers.py
src/family_apiary/products/infrastructure/api_controllers/v1/: product_purchase_requests.py  product_requests.py  schemas.py
src/family_apiary/products/infrastructure/database/: __init__.py  mapping.py  meta.py  settings.py
src/family_apiary/products/infrastructure/database/alembic/: env.py
src/family_apiary/products/infrastructure/database/migrations/: 2025_06_02_01_56_34_create_purchase_requests_tables.py
src/family_apiary/products/infrastructure/database/repositories/: purchase_request_repo.py
src/family_apiary/products/infrastructure/database/tables/: __init__.py  purchase_request_products.py  purchase_requests.py
src/family_apiary/products/infrastructure/tg_chat_bot/: __init__.py  settings.py
src/family_apiary/run/: api.py  products_alembic_runner.py  tg_chat_bot.py
(+2 files in other folders)
