[project]
name = "family-apiary-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.20.0.post0",
    "coloredlogs==15.0.1",
    "dishka==1.5.3",
    "fastapi==0.115.12",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic-settings==2.9.1",
    "python-json-logger==3.3.0",
    "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[tool.ruff]
src = ["src"]
line-length = 80

[tool.ruff.lint]
select = [
    # isort
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

