[project]
name = "family-apiary-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.20.0.post0",
    "alembic==1.16.1",
    "coloredlogs==15.0.1",
    "dataclass-mapper==2.0.0a4",
    "dishka==1.5.3",
    "fastapi==0.115.12",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic-settings==2.9.1",
    "python-json-logger==3.3.0",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
src = ["src"]
line-length = 80

[tool.ruff.lint]
select = [
    # isort
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"

